--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -21,22 +21,21 @@
       <ion-avatar item-start>
         <img src="img/marty-avatar.png">
       </ion-avatar>
-      <h2>Marty McFly</h2>
+      <h2>Francisco Chaes</h2>
       <p>November 5, 1955</p>
     </ion-item>
 
     <img src="img/advance-card-bttf.png">
 
     <ion-card-content>
-      <p>Wait a minute. Wait a minute, Doc. Uhhh... Are you telling me that you built a time machine... out of a DeLorean?!
-        Whoa. This is heavy.</p>
+      <p>Estou criando um app invcrivel...</p>
     </ion-card-content>
 
     <ion-row>
       <ion-col>
         <button ion-button icon-start clear small>
           <ion-icon name="thumbs-up"></ion-icon>
-          <div>12 Likes</div>
+          <div>129 Likes</div>
         </button>
       </ion-col>
       <ion-col>
@@ -53,5 +52,5 @@
     </ion-row>
 
   </ion-card>
-  
+
 </ion-content>
