--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -15,13 +15,16 @@
 
 <ion-content padding>
 
+  <h1>Nome do usuário</h1>
+
   <ion-card>
 
     <ion-item>
       <ion-avatar item-start>
         <img src="img/marty-avatar.png">
       </ion-avatar>
-      <h2>Francisco Chaes</h2>
+      <!-- Interpolação, para ligar a variavel a tela {{ }} -->
+      <h2>{{ nome_usuario }}</h2>
       <p>November 5, 1955</p>
     </ion-item>
 
