--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -21,14 +21,14 @@
 
     <ion-item>
       <ion-avatar item-start>
-        <img src="img/marty-avatar.png">
+        <img src="assets/imgs/marty-avatar.png">
       </ion-avatar>
       <!-- Interpolação, para ligar a variavel a tela {{ }} -->
       <h2>{{ nome_usuario }}</h2>
       <p>November 5, 1955</p>
     </ion-item>
 
-    <img src="img/advance-card-bttf.png">
+    <img src="assets/imgs/advance-card-bttf.png">
 
     <ion-card-content>
       <p>Estou criando um app invcrivel...</p>
