--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -24,8 +24,8 @@
         <img src="assets/imgs/marty-avatar.png">
       </ion-avatar>
       <!-- Interpolação, para ligar a variavel a tela {{ }} -->
-      <h2>{{ nome_usuario }}</h2>
-      <p>November 5, 1955</p>
+      <h2 class="feed_title">{{ nome_usuario }}</h2>
+      <p class="fedd_date">November 5, 1955</p>
     </ion-item>
 
     <img src="assets/imgs/advance-card-bttf.png">
