--- a/src/pages/intro/intro.html
+++ b/src/pages/intro/intro.html
@@ -5,18 +5,21 @@
   Ionic pages and navigation.
 -->
 
-<ion-content >
+<ion-content>
   <ion-slides pager>
 
-    <ion-slide style="background-color: green">
+    <ion-slide>
+      <img src="assets/imgs/slide1.png">
       <h2>Slide 1</h2>
     </ion-slide>
 
-    <ion-slide style="background-color: blue">
+    <ion-slide>
+      <img src="assets/imgs/slide2.png">
       <h2>Slide 2</h2>
     </ion-slide>
 
-    <ion-slide style="background-color: red">
+    <ion-slide>
+      <img src="assets/imgs/slide3.png">
       <h2>Slide 3</h2>
     </ion-slide>
 
