--- a/src/pages/intro/intro.html
+++ b/src/pages/intro/intro.html
@@ -5,12 +5,22 @@
   Ionic pages and navigation.
 -->
 
-<ion-content>
+<ion-content padding>
   <ion-slides pager>
 
     <ion-slide>
       <img src="assets/imgs/slide1.png">
-      <h2>Slide 1</h2>
+      <h2>Meu app Fantastico</h2>
+      <br>
+      <div>
+        <p>
+          Este meu app terá funções incriveis.Ele foi feito para impressionar você.
+        </p>
+        <p>
+          Ficou curioso? <strong>Veja mais</strong>
+        </p>
+        <br>
+      </div>
     </ion-slide>
 
     <ion-slide>
