redirecionando da página Intro para página principal

--- a/src/pages/intro/intro.html
+++ b/src/pages/intro/intro.html
@@ -33,5 +33,13 @@
       <h2>Slide 3</h2>
     </ion-slide>
 
+    <ion-slide>
+      <img src="assets/imgs/slide3.png">
+      <h2>Slide 4</h2>
+
+      <!--Evento do click-->
+      <a (click)="goToTabsPage()">Continuar</a>
+    </ion-slide>
+
   </ion-slides>
 </ion-content>
