--- a/src/pages/configuracoes/configuracoes.html
+++ b/src/pages/configuracoes/configuracoes.html
@@ -1,18 +1,19 @@
-<!--
-  Generated template for the ConfiguracoesPage page.
+<ion-menu [content]="content">
+  <ion-header>
+    <ion-toolbar>
+      <ion-title>Menu</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content>
+    <ion-list>
+      <button ion-item (click)="abrirPerfil()">
+        Perfil
+      </button>
+      <button ion-item (click)="abrirSobre()">
+        Sobre
+      </button>
+    </ion-list>
+  </ion-content>
+</ion-menu>
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>configuracoes</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
-<ion-content padding>
-
-</ion-content>
+<ion-nav id="nav" #content [root]="rootPage"></ion-nav>
