--- a/src/pages/sobre/sobre.html
+++ b/src/pages/sobre/sobre.html
@@ -7,6 +7,9 @@
 <ion-header>
 
   <ion-navbar>
+      <button ion-button icon-only menuToggle>
+          <ion-icon name="menu"></ion-icon>
+        </button>    
     <ion-title>sobre</ion-title>
   </ion-navbar>
 
@@ -14,5 +17,5 @@
 
 
 <ion-content padding>
-
+Esta é a página sobre!
 </ion-content>
