--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -56,7 +56,7 @@
         </ion-note>
       </ion-col>
     </ion-row>
-
+    <button ion-button block (click)="abrirDetalhes(filme)">Detalhes</button>
   </ion-card>
 
 </ion-content>
