Utilizando plugin nativo da câmara

--- a/src/pages/perfil/perfil.html
+++ b/src/pages/perfil/perfil.html
@@ -17,5 +17,7 @@
 
 
 <ion-content padding>
-Este é meu perfil!
+  Este é meu perfil!
+  <img *ngIf="img" [src]="img">
+  <button ion-button block (click)="tiraFoto()">Tira Foto</button>
 </ion-content>
